# huffman

./: .gitignore  CMakeLists.txt  TASK.md
.github/workflows/: cmake-build.yml
include/: huffman.hpp  non_copyable.hpp  symbol_tree.hpp
src/: huffman.cpp  main.cpp  symbol_tree.cpp
test/: symbol_tree.cpp  test.cpp
